--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <div id="upperbar">
-        <div id="Main_name">Delivery Desert</div>
+        <div id="Main_name">Not on the Map</div>
+        <div id="Main_sub_name">: The Missing Link in Food Access</div>
         <div id="Main_tabs">
             <div class="Main_tab">About</div>
             <div class="Main_tab">Suburbs</div>
