--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
         <div class="container" id="imageGrid"></div>
       </div>
     <div id="Main_map"></div>
+    <div id="Cities_map"></div>
     <script src="https://api.mapbox.com/mapbox-gl-js/v3.9.4/mapbox-gl.js"></script>
     <script src="script.js"></script>
 </body>
