--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <div class="Main_tab">About</div>
             <div class="Main_tab">Food_Access_Analyzer</div>
             <div class="Main_tab">Access_Story</div>
-            <div class="Main_tab">Potential_Approach</div>
+            <div class="Main_tab">Potential_Implementation</div>
         </div>
     </div>
     <div id="sidebar">
@@ -347,7 +347,24 @@
       </div>
     <div id="Main_map"></div>
     <div id="Cities_map"></div>
-    
+    <div id="GroupDelivery">
+        <div id="Tool">
+            <img class="GroupDelivery_4" src="Chrome_extension/GroupDelivery_4.png" alt="GroupDelivery_1" width="100">
+            <img class="GroupDelivery_1" src="Chrome_extension/GroupDelivery_1.png" alt="GroupDelivery_1" width="100">
+            <img class="GroupDelivery_2" src="Chrome_extension/GroupDelivery_2.png" alt="GroupDelivery_1" width="100">
+            <img class="GroupDelivery_3" src="Chrome_extension/GroupDelivery_3.png" alt="GroupDelivery_1" width="100">
+        </div>
+    </div>
+
+    <div id="GroupDelivery_Order">
+        <div id="Tool_Order">
+            <img class="GroupDelivery_Order_1" src="Chrome_extension/Order/GroupDelivery_Order_1.png" alt="GroupDelivery_Order_1" width="100">
+            <img class="GroupDelivery_Order_2" src="Chrome_extension/Order/GroupDelivery_Order_2.png" alt="GroupDelivery_Order_2" width="100">
+            <img class="GroupDelivery_Order_3" src="Chrome_extension/Order/GroupDelivery_Order_3.png" alt="GroupDelivery_Order_3" width="100">
+            <img class="GroupDelivery_Order_4" src="Chrome_extension/Order/GroupDelivery_Order_4.png" alt="GroupDelivery_Order_4" width="100">
+        </div>
+    </div>
+
     <script src="https://api.mapbox.com/mapbox-gl-js/v3.9.4/mapbox-gl.js"></script>
     <script src="script.js"></script>
 </body>
